# Devito-fwi

./: .gitignore  LICENSE  README.md  environment-gpu.yml  environment-mpi.yml  environment.yml  install_env.sh  install_gpuenv.sh  install_mpienv.sh  pyproject.toml
devitofwi/: nonlinear.py  source.py  utils.py
devitofwi/deep/: torchoperator.py  utils.py
devitofwi/devito/: source.py  utils.py
devitofwi/devito/acoustic/: operators.py  wavesolver.py
devitofwi/fwi/: acoustic.py
devitofwi/loss/: dtw.py  empty.py  l2.py  xcorr.py
devitofwi/optimization/: firstorder.py
devitofwi/postproc/: acoustic.py
devitofwi/preproc/: filtering.py  masking.py
devitofwi/visual/: data.py
devitofwi/waveengine/: acoustic.py
notebooks/acoustic/: AcousticVel_L2Torch_1stage.ipynb  AcousticVel_L2_1stage.ipynb  AcousticVel_L2_1stage_sub_gradient.ipynb  AcousticVel_L2refr_1stage.ipynb  AcousticVel_L2refr_1stagewrapper.ipynb  AcousticVel_L2torch_1stage.ipynb  AcousticVel_SoftDTWref_1stagewrapper.ipynb  AcousticVel_XCorrrefr_1stagewrapper.ipynb  Acoustic_RTM.ipynb  Gradient_comparison.ipynb  Gradient_decoupled.ipynb  Modelling_filtering.ipynb
scripts/acoustic/: AcousticVel_L2PDTV_1stage.py  AcousticVel_L2PDTV_1stage_noisy.py  AcousticVel_L2_1stage.py  AcousticVel_L2bbgraddescent_1stage.py  AcousticVel_L2graddescent_1stage.py  Gradient_comparison_mpi.py  Gradient_full.py  Gradient_snap.py
