[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]

[project]
name = "devitofwi"
authors = [
    {name = "Matteo Ravasi", email = "matteo.ravasi@kaust.edu.sa"},
]
description = "A collection of codes to perform FWI with Devito."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["seismic", "optimization", "full waveform", ]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
        "numpy >= 1.15.0",
        "matplotlib",
        "devito",
        "pylops >= 2.0.0",
        "torch",
    ]
dynamic = ["version"]

[project.optional-dependencies]
mpi = [
    "mpi4py",
]

[tool.setuptools.packages]
find = {}